--- a/app/src/main/res/layout/thirdpage.xml
+++ b/app/src/main/res/layout/thirdpage.xml
@@ -220,7 +220,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="130dp"
       android:layout_marginEnd="130dp"
-      android:text="Back"
+      android:text="LogOut"
       android:backgroundTint="#FFFFFF"
       android:textColor="#141517"
       android:padding="1dp"
@@ -230,31 +230,6 @@
 
 
 </RelativeLayout>
-
-
-<!--  <LinearLayout-->
-
-<!--      android:layout_width="match_parent"-->
-<!--      android:layout_height="wrap_content"-->
-<!--      android:layout_below="@id/first_row"-->
-<!--      android:layout_marginTop="389dp"-->
-<!--      android:gravity="center"-->
-<!--      android:orientation="horizontal">-->
-
-<!--    <ImageView-->
-<!--        android:layout_width="120dp"-->
-<!--        android:layout_height="120dp"-->
-<!--        android:layout_marginEnd="60dp"-->
-<!--        android:src="@drawable/policy"-->
-<!--        tools:ignore="HardcodedText" />-->
-
-
-<!--    <ImageView-->
-<!--        android:layout_width="120dp"-->
-<!--        android:layout_height="120dp"-->
-<!--        android:src="@drawable/info" />-->
-
-<!--  </LinearLayout>-->
 
 
 
