--- a/app/src/main/res/layout/firstpage.xml
+++ b/app/src/main/res/layout/firstpage.xml
@@ -11,9 +11,9 @@
     tools:context=".MainMenu">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_width="395dp"
+        android:layout_height="519dp"
+        android:layout_marginTop="11dp"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -26,62 +26,57 @@
             android:text="GECE Portal App"
             android:textColor="#050505"
             android:textSize="30sp"
-            tools:ignore="HardcodedText"/>
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#FFFFFF"
+            android:padding="18dp"
+            android:text="Log in as:"
+            android:textColor="#050505"
+            android:textSize="30sp"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/student_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Student"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#161617"
-            android:padding="18dp"
             android:layout_marginTop="25dp"
+            android:backgroundTint="#FFFFFF"
+            android:padding="18dp"
+            android:text="Student"
+            android:textColor="#161617"
             android:textSize="20sp"
-            tools:ignore="HardcodedText"/>
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/Faculty_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Faculty"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#000000"
-            android:padding="18dp"
             android:layout_marginTop="25dp"
+            android:backgroundTint="#FFFFFF"
+            android:padding="18dp"
+            android:text="Faculty"
+            android:textColor="#000000"
             android:textSize="20sp"
-            tools:ignore="HardcodedText"/>
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/Admin_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Admin"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#141517"
-            android:padding="18dp"
             android:layout_marginTop="25dp"
+            android:backgroundTint="#FFFFFF"
+            android:padding="18dp"
+            android:text="Admin"
+            android:textColor="#141517"
             android:textSize="20sp"
-            tools:ignore="HardcodedText"/>
-
+            tools:ignore="HardcodedText" />
 
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/portalscreen_back_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginEnd="130dp"
-        android:layout_marginTop="600dp"
-        android:text="Back"
-        android:backgroundTint="#FFFFFF"
-        android:textColor="#141517"
-        android:padding="1dp"
-        android:textSize="18sp"
-        tools:ignore="HardcodedText"/>
-
 
 
 </RelativeLayout>
